<resources>
    <string name="app_name">Readnetic</string>

    <!--Bottom Menu-->
    <string name="settings">Settings</string>
    <string name="homeapps">Home</string>
    <string name="work">Favorites</string>
    <string name="Profile">Profile</string>

    <!--Login-->
    <string name="name">Name</string>
    <string name="account">Don\'t have an account? Sign Up</string>
    <string name="forgot">Forgot password?</string>
    <string name="signUp">Sign Up</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="adress">Address</string>

    <!--Card-->
    <string name="cover">Cover</string>
    <string name="title_place_holder">Title Place Holder</string>
    <string name="author_placeholder">Author PlaceHolder</string>

    <!-- ISBN Scanner -->
    <string name="message_camera_scanner_isbn">Escanea el ISBN</string>

    <!-- Error -->
    <string name="connectivity_error">Connectivity Error</string>
    <string name="server_error">\"Server Error: \"</string>
    <string name="unknown_error">\"Unknown Error: \"</string>
    <string name="book_image">book_image</string>
    <string name="favorite_button">favorite_button</string>
    <string name="favorite_home">favorite_home</string>
    <string name="qr_icon">qr_icon</string>
</resources>