<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.LoginFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottielog"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:lottie_rawRes="@raw/loganimation"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvLogin"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/palmBlue"
            android:layout_marginTop="25dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/lottielog"
            app:layout_constraintBottom_toTopOf="@+id/textFieldUserName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/tvLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            app:boxStrokeColor="@color/palmBlue"
            app:hintTextColor="@color/palmLightBlue"
            android:theme="@style/TextInputLayoutAppearance"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/textFieldUserName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@color/palmBlue"
            app:hintTextColor="@color/palmLightBlue"
            android:hint="@string/password"
            android:theme="@style/TextInputLayoutAppearance"
            app:endIconMode="password_toggle"
            app:helperTextEnabled="true"
            app:helperText="Password must contain 9 characters">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:backgroundTint="@color/palmBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnForgot"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/forgot"
            android:textAllCaps="false"
            android:textColor="@color/palmBlue"
            app:layout_constraintTop_toBottomOf="@id/textFieldPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/account"
        android:textAllCaps="false"
        android:textColor="@color/palmBlue"
        app:layout_constraintTop_toBottomOf="@id/loginBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>